@@ -3,6 +3,7 @@
 * Filter out 1 and 2 digit integers from tool warnings.
   Show original message, not filtered message.
   Closes bug #281 (Error processing with Tesserarct: Detected 99 Diacritics)
+* Add option to profile only after successfully applying it
 
 
 1.8.7 (22.09.2017):
